[gd_scene load_steps=4 format=3 uid="uid://dpcgwk0hgrgt5"]

[ext_resource type="Script" path="res://deck-builder/deck_builder.gd" id="1_10brx"]
[ext_resource type="Texture2D" uid="uid://cbljg8b2n56x6" path="res://title-screen/sprites/border.png" id="1_lessj"]
[ext_resource type="Theme" uid="uid://dqjm0g80h0h8f" path="res://title-screen/title_screen_theme.tres" id="2_eh0ri"]

[node name="deck_builder" type="Node2D"]
script = ExtResource("1_10brx")

[node name="bg" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="selected_card" type="NinePatchRect" parent="."]
offset_top = 70.0
offset_right = 295.0
offset_bottom = 720.0
texture = ExtResource("1_lessj")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 11
patch_margin_bottom = 12

[node name="Button" type="Button" parent="selected_card"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 607.0
offset_right = -27.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_eh0ri")
text = "Save"

[node name="LineEdit" type="LineEdit" parent="selected_card"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 42.0
offset_top = 199.0
offset_right = -40.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_eh0ri")

[node name="ScrollContainer" type="ScrollContainer" parent="selected_card"]
layout_mode = 0
offset_left = 26.0
offset_top = 45.0
offset_right = 279.0
offset_bottom = 517.0

[node name="cards" type="VBoxContainer" parent="selected_card/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="card" type="NinePatchRect" parent="."]
offset_left = 295.0
offset_top = 70.0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_lessj")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 11
patch_margin_bottom = 13

[node name="deck_selection" type="TabContainer" parent="card"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 32.0
offset_right = -34.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_eh0ri")

[node name="Thyena" type="ScrollContainer" parent="card/deck_selection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
horizontal_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="card/deck_selection/Thyena"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 39
columns = 4

[node name="Tikkers" type="ScrollContainer" parent="card/deck_selection"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="card/deck_selection/Tikkers"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="Aouni" type="ScrollContainer" parent="card/deck_selection"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="card/deck_selection/Aouni"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="Mysticle" type="ScrollContainer" parent="card/deck_selection"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="card/deck_selection/Mysticle"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="Wildcardz" type="ScrollContainer" parent="card/deck_selection"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="card/deck_selection/Wildcardz"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="Kahn" type="ScrollContainer" parent="card/deck_selection"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="card/deck_selection/Kahn"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="Reinalia" type="ScrollContainer" parent="card/deck_selection"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="card/deck_selection/Reinalia"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="back" type="Button" parent="."]
offset_right = 167.0
offset_bottom = 66.0
theme = ExtResource("2_eh0ri")
text = "<< Back"

[connection signal="pressed" from="selected_card/Button" to="." method="_on_button_pressed"]
[connection signal="tab_button_pressed" from="card/deck_selection" to="." method="_on_deck_selection_tab_button_pressed"]
[connection signal="tab_clicked" from="card/deck_selection" to="." method="_on_deck_selection_tab_clicked"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
